Update LevelTrader